Blog page added

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -42,7 +42,7 @@
 
 @mixin b($point) {
   @if $point==desktop {
-    @media (max-width: 1366px) and (min-width: 1024px) {
+    @media (min-width: breakpoints.$tablet + 1) {
       @content;
     }
   } @else if $point==tablet {
