--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
 
 .main-wrapper {
   width: 100%;
+  height: 100%;
 
   background-color: var(--gray-900);
 
@@ -9,6 +10,7 @@
     display: flex;
     flex-direction: column;
     max-width: styles.$width-limit;
+    height: 100%;
     margin: 0 auto;
     padding: 0 72px;
 
