--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,8 +1,11 @@
 <header>
-  <img src="assets/images/icons/logo.png" alt="logo" width="108px" height="36px" />
+  <a link="/">
+    <img src="assets/images/icons/logo.png" alt="logo" width="108px" height="36px" />
+  </a>
   <div class="links-container">
     <a class="link" [link]="LINKS.DESIGN">Design</a>
     <a class="link" [link]="LINKS.GITHUB">Github</a>
+    <a class="link" [routerLink]="ROUTE_PATH.BLOG" routerLinkActive="link_active">Blog</a>
     <a class="link" [link]="LINKS.TELEGRAM">Telegram</a>
   </div>
   <button #burger class="burger" [class.burger_opened]="burgerOpened" (click)="burgerToggled()">
@@ -11,6 +14,7 @@
     <div class="dropdown-content" [class.dropdown-content_opened]="burgerOpened">
       <a [link]="LINKS.DESIGN">Design</a>
       <a [link]="LINKS.GITHUB">Github</a>
+      <a [routerLink]="ROUTE_PATH.BLOG">Blog</a>
       <a [link]="LINKS.TELEGRAM">Telegram</a>
     </div>
   </button>
